Removed optimitzeLegibility for now Fixes

--- a/src/includes/global.styl
+++ b/src/includes/global.styl
@@ -5,7 +5,6 @@ body {
 	color: #000;
 	font: 16px "Source Sans", helvetica, arial, sans-serif;
 	font-weight: 200;
-	text-rendering: optimizeLegibility;
 }
 
 :focus {
